--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body
     color: #333;
     text-align: center;
     margin: 0;
-    padding: 50px;
 }
 h1 {
     color: #2c3e50;
@@ -31,4 +30,38 @@ p {
     max-width: 100%;
     max-height: 600px;
     height: auto;
+}
+.navbar {
+    overflow: hidden;
+    background-color: #888888;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    text-align: left;
+}
+/*Navigation bar links*/
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+.navbar a.right {
+    float: right;
+}
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+.navbar a.active {
+    background-color: #a7a7a7;
+    color: white;
+}
+@media screen and (max-width: 800px) {
+    .navbar a {
+        float: none;
+        width: 100;
+    }
 }
