--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body {
     color: #333;
     text-align: center;
     margin: 0;
-    padding-top: 60px; /* Adjust this to the height of your navbar */
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
 h1 {
     color: #2c3e50;
@@ -76,4 +77,19 @@ p {
         float: none;
         width: 100%;
     }
+}
+footer {
+    background-color: #888888;
+    color: white;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
+}
+footer a {
+    color: white;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
 }
