--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,31 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     color: #333;
     text-align: center;
     margin: 0;
-    padding-top: 50px;
-    padding-bottom: 100px;
+    padding-top: 50px; /* Adjust this to the height of your navbar */
 }
+
+.content {
+    flex: 1; /* Ensures the content takes up the remaining space */
+}
+
 h1 {
     color: #2c3e50;
 }
+
 p {
     font-size: 1.2em;
 }
+
 .experiments {
     background-color: blanchedalmond;
     color: black;
@@ -21,16 +34,19 @@ p {
     margin: 20px;
     padding: 20px;
 }
+
 #blenderHeader {
     color: #515151;
     padding: 5px;
     text-align: center;
 }
+
 .imgage {
     max-width: 100%;
     max-height: 600px;
     height: auto;
 }
+
 .navbar {
     overflow: hidden;
     background-color: #888888;
@@ -40,6 +56,7 @@ p {
     text-align: left;
     transition: top 0.3s;
 }
+
 /* Navigation bar links */
 .navbar a {
     float: left;
@@ -49,47 +66,56 @@ p {
     padding: 14px 20px;
     text-decoration: none;
 }
+
 .navbar a.right {
     float: right;
 }
+
 .navbar a:hover {
     background-color: #ddd;
     color: black;
 }
+
 .navbar a.active {
     background-color: #a7a7a7;
     color: white;
 }
+
 .responsive-iframe {
     width: 60%;
     height: 50vh;
     border: 2px solid rgb(203, 203, 203);
 }
+
 @media (max-width: 800px) {
     body {
-        padding-top: 200px;
+        padding-top: 200px; /* Increased padding for smaller screens to accommodate stacked navbar */
     }
+
     .responsive-iframe {
         width: 90%;
         height: 40vh;
     }
+
     .navbar a {
         float: none;
         width: 100%;
     }
 }
+
 footer {
     background-color: #888888;
     color: white;
-    position: fixed;
+    padding: 10px 0;
     width: 100%;
-    bottom: 0;
     text-align: center;
 }
+
 footer a {
     color: white;
     text-decoration: none;
 }
+
 footer a:hover {
     text-decoration: underline;
 }
