--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+a {
+    color: #0000EE;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #0000EE;
+}
+
+a:hover {
+    color: #551A8B;
+    text-decoration: underline;
+}
+
+a:active {
+    color: #FF0000;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -119,3 +137,4 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
+
